Upload the artifact in "deploy" phase.
Too early in "package" phase.

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
                 <executions>
                     <execution>
                         <id>upload-jar</id>
-                        <phase>package</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>upload</goal>
                         </goals>
